[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/Coop_Stage.gd" type="Script" id=1]
[ext_resource path="res://sprites/wall_right.png" type="Texture" id=2]
[ext_resource path="res://sprites/wall_top.png" type="Texture" id=3]
[ext_resource path="res://sprites/wall_bottom.png" type="Texture" id=4]
[ext_resource path="res://sprites/background_stage_1.png" type="Texture" id=5]
[ext_resource path="res://sprites/wall_left.png" type="Texture" id=6]
[ext_resource path="res://objects/Platform_Large.tscn" type="PackedScene" id=7]
[ext_resource path="res://physics_material/PhyisicsMaterial_Wall.tres" type="PhysicsMaterial" id=8]
[ext_resource path="res://objects/Ladder_Large.tscn" type="PackedScene" id=9]
[ext_resource path="res://objects/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://objects/Destructible_Platform_Small.tscn" type="PackedScene" id=11]
[ext_resource path="res://sounds/Luke-Bergs-Tropical-Soulmp3.mp3" type="AudioStream" id=12]
[ext_resource path="res://objects/Android_Joystick.tscn" type="PackedScene" id=13]
[ext_resource path="res://environments/stage_environment.tres" type="Environment" id=14]
[ext_resource path="res://objects/Remote_Player.tscn" type="PackedScene" id=15]
[ext_resource path="res://objects/Android_Button.tscn" type="PackedScene" id=16]
[ext_resource path="res://themes/custom_theme.tres" type="Theme" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 960, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 539 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 538 )

[node name="coop_stage_1" type="Node2D"]
script = ExtResource( 1 )

[node name="main" type="WorldEnvironment" parent="."]
environment = ExtResource( 14 )

[node name="Android_Joystick" parent="." instance=ExtResource( 13 )]
position = Vector2( 78, 912 )
z_index = 10

[node name="Android_Button" parent="." instance=ExtResource( 16 )]
position = Vector2( 1682, 912 )
z_index = 10

[node name="background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
z_index = -1000
texture = ExtResource( 5 )

[node name="KinematicBody2D_Remote_Player" parent="." instance=ExtResource( 15 )]
position = Vector2( 1060, 829 )
z_index = 100

[node name="KinematicBody2D_Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 860, 829 )
z_index = 100

[node name="StaticBody2D_WallBottom_1" type="StaticBody2D" parent="."]
position = Vector2( 960, 1070 )
physics_material_override = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D_WallBottom_1"]
shape = SubResource( 1 )

[node name="Sprite_WallBottom" type="Sprite" parent="StaticBody2D_WallBottom_1"]
texture = ExtResource( 4 )

[node name="StaticBody2D_WallBottom_2" type="StaticBody2D" parent="."]
position = Vector2( 960, 914 )
physics_material_override = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D_WallBottom_2"]
shape = SubResource( 1 )

[node name="Sprite_WallBottom" type="Sprite" parent="StaticBody2D_WallBottom_2"]
texture = ExtResource( 4 )

[node name="StaticBody2D_WallTop" type="StaticBody2D" parent="."]
position = Vector2( 960, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D_WallTop"]
shape = SubResource( 2 )

[node name="Sprite_WallTop" type="Sprite" parent="StaticBody2D_WallTop"]
texture = ExtResource( 3 )

[node name="StaticBody2D_WallRight" type="StaticBody2D" parent="."]
position = Vector2( 1910, 540 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D_WallRight"]
shape = SubResource( 3 )

[node name="Sprite_WallRight" type="Sprite" parent="StaticBody2D_WallRight"]
scale = Vector2( 1, 0.998148 )
texture = ExtResource( 2 )

[node name="StaticBody2D_WallLeft" type="StaticBody2D" parent="."]
position = Vector2( 10, 540 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D_WallLeft"]
shape = SubResource( 4 )

[node name="Sprite_WallLeft" type="Sprite" parent="StaticBody2D_WallLeft"]
scale = Vector2( 1, 0.997222 )
texture = ExtResource( 6 )

[node name="StaticBody2D_platform_large_1" parent="." instance=ExtResource( 7 )]
position = Vector2( 1800, 666 )

[node name="StaticBody2D_platform_large_2" parent="." instance=ExtResource( 7 )]
position = Vector2( 1460, 666 )

[node name="StaticBody2D_platform_large_3" parent="." instance=ExtResource( 7 )]
position = Vector2( 460, 666 )

[node name="StaticBody2D_platform_large_4" parent="." instance=ExtResource( 7 )]
position = Vector2( 120, 666 )

[node name="StaticBody2D_destructible_platform_small_1" parent="." instance=ExtResource( 11 )]
position = Vector2( 1226.66, 666 )

[node name="StaticBody2D_destructible_platform_small_2" parent="." instance=ExtResource( 11 )]
position = Vector2( 1093.33, 666 )

[node name="StaticBody2D_destructible_platform_small_3" parent="." instance=ExtResource( 11 )]
position = Vector2( 960, 666 )

[node name="StaticBody2D_destructible_platform_small_4" parent="." instance=ExtResource( 11 )]
position = Vector2( 826.7, 666 )

[node name="StaticBody2D_destructible_platform_small_5" parent="." instance=ExtResource( 11 )]
position = Vector2( 693.34, 666 )

[node name="Ladder_Large_right" parent="." instance=ExtResource( 9 )]
position = Vector2( 1630, 679 )

[node name="Ladder_Large_left" parent="." instance=ExtResource( 9 )]
position = Vector2( 290, 679 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 12 )
autoplay = true

[node name="TimeLeft_Label" type="Label" parent="."]
margin_left = 809.0
margin_top = 955.0
margin_right = 962.0
margin_bottom = 984.0
theme = ExtResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Time left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_lbl" type="Label" parent="."]
margin_left = 985.0
margin_top = 955.0
margin_right = 1023.0
margin_bottom = 988.0
theme = ExtResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Timer_lbl"]
wait_time = 60.0
one_shot = true
autostart = true

[node name="ScoreText_Label" type="Label" parent="."]
margin_left = 812.0
margin_top = 1000.0
margin_right = 965.0
margin_bottom = 1029.0
theme = ExtResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNumber_Label" type="Label" parent="."]
margin_left = 984.0
margin_top = 999.0
margin_right = 1047.0
margin_bottom = 1031.0
theme = ExtResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
